# ProyectoTitulacion-Trazabilidad-sem-ntica-en-GitHub-mediante-un-servidor-MCP

./: pyproject.toml
.cursor/: mcp.json
ServidorMCP/: # File Tree: Ania.md  app.py  config.py  main.py  prompt_builder.py  pyproject.toml  requirements.txt  retrieval.py  server.py
ServidorMCP/connectors/: __init__.py  github.py  localgit.py  markdown.py  openai.py  repo.py  scraper.py
ServidorMCP/core/: __init__.py
ServidorMCP/indexer/: __init__.py  fragment.py  index.py  store.py
ServidorMCP/logic/: GitHubCliente.py  MarkdownProcessor.py  OpenAICliente.py  __init__.py
ServidorMCP/models/: __init__.py
ServidorMCP/models/GitHubModels/: ArchivoArbol.py  ArchivoDiff.py  Commit.py  DiferenciaCommits.py  EstructuraProyecto.py  ExplicacionCommit.py  PullRequest.py  __init__.py
ServidorMCP/models/SemanticText/: Fragmento.py  IndiceDocumento.py  ResultadoBusqueda.py  __init__.py
ServidorMCP/router/: __init__.py  documentacion_tools.py  github_tools.py  main.py
ServidorMCP/setting/: __init__.py  conf.py
ServidorMCP/tools/: __init__.py  docs.py  github.py  semantic.py
ServidorMCP/transport/: __init__.py  documentacion_tools.py  github_tools.py  main.py
test/: testE2E.py  testGithub.py  testMarkdown.py  testScraper.py  testSemantic.py
