[project]
name = "tesis"
version = "0.1.0"
description = "Servidor MCP para trazabilidad semántica entre código, documentación y evolución histórica en GitHub"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pyproject-toml>=0.1.0",
    "scikit-learn>=1.9.0",
    "openai>=2.41.0",
]

[project.scripts]
tesis-mcp = "ServerMCP.main:main"
